--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         </p>
         <h2>Contact Info</h2>
         <ul>
-            
+            <li><strong>Emial:</strong> <a href="Email@gmail.com">Email</a></li>
+            <li><strong>Github:</strong> <a href="Github">Github</a></li>
+            <li><strong>Portfolio:</strong> <a href="Port">Portfolio</a></li>
         </ul>
     </body>
 </html>
