added css style

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
     <head>
         <title>Student Bio</title>
+        <style>
+            h1 {
+                font-size: 20px;
+                color: white;
+                background-color: black;
+                text-align: center;
+                font-family: Georgia, 'Times New Roman', Times, serif
+            }
+
+        </style>
     </head>
     <body>
         <header>
@@ -11,7 +21,7 @@
         </p>
             <img src="http://images.mentalfloss.com/sites/default/files/styles/mf_image_16x9/public/istock-498886489.jpg?itok=M1UKY665&resize=200x200" alt="honeybadger">
         <p>
-            Testing.. <a href="Link.com"></a>
+            Testing.. <a href="Link.com">Link</a>
         </p>
         <h2>Contact Info</h2>
         <ul>
