--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
     <head>
         <title>Student Bio</title>
         <style>
+            header {
+                background: #333;
+            }
+
             h1 {
-                font-size: 20px;
-                color: white;
-                background-color: black;
+                padding: 20px 0;
+                margin: 0;
+                margin-bottom: 20px;
+                font-size: 28px
+                color: #eee;
                 text-align: center;
-                font-family: Georgia, 'Times New Roman', Times, serif
             }
 
         </style>
