added color to links and h2

--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
                 text-align: center;
             }
 
+            h2 {
+                font-size: 24px;
+            }
+
+            a{
+                color: #d21034
+            }
+
         </style>
     </head>
     <body>
