--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 margin: 0;
                 margin-bottom: 20px;
                 font-size: 28px
-                color: #eee;
+                color: white;
                 text-align: center;
             }
 
@@ -21,6 +21,21 @@
 
             a{
                 color: #d21034
+            }
+
+            body {
+                padding: 0;
+                margin: 0;
+                font-family: Georgia, 'Times New Roman', Times, serif;
+                font-size: 18px;
+                line-height: 150%
+                color: #333;
+                background: #efeee7;
+            }
+
+            .container {
+                width: 1024px;
+                margin: 0 auto;
             }
 
         </style>
